# xiaomi-miloco

./: CHANGELOG.md  CHANGELOG.zh_Hans.md  README.md  README.zh_Hans.md
miloco_server/: pyproject.toml
miot_kit/: pyproject.toml  setup.py
